html class name fixed, css header gap adjusted, and buttons decorated

--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,19 @@ h1 {
 }
 
 .flex-container ul {
-    gap: 1.875rem;
+    gap: 0;
     padding: 0;
+    column-gap: 1.875rem;
+}
+
+header a {
+    text-decoration: none;
+}
+
+header>a {
+    display: inline-block;
+    background-color: var(--primary-red);
+    padding: .75rem 1rem;
 }
 
 body {
@@ -44,7 +55,7 @@ body {
 }
 
 .img-container {
-    flex-basis: 1 1 7.5;
+    flex-basis: 1 1 7.5%;
 }
 
 .banner {
